--- a/connections/rockpaperscissors/app/src/main/AndroidManifest.xml
+++ b/connections/rockpaperscissors/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/clapping_hands"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
